Added Voldemort quote

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,6 +27,10 @@ and open the template in the editor.
             <p>Fix the cause, not the symptom." - Steve Magu</p>
             <br>
             
+            <p> "There is no good or evil. There is only
+                power and those too weak to seek it." ~ Lord Voldemort</p>
+            <p>shared by Grant Smith (gsmith320)</p>
+            <br>
         </div>
      </body>
 </html>
